kubernetes/apps/fastapi-boilerplate/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fastapi-api
  annotations:
    cert-manager.io/cluster-issuer: homelab-ca-issuer
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - api.kamitbrains-minipc-k1.lab
      secretName: fastapi-api-tls
  rules:
    - host: api.kamitbrains-minipc-k1.lab
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: fastapi-api
                port:
                  number: 80
